--- a/package.json
+++ b/package.json
@@ -48,8 +48,9 @@
     "styled-components": "^5.1.1"
   },
   "dependencies": {
-    "@dreitagebart/box": "^1.0.2",
+    "@dreitagebart/box": "^1.0.5",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.merge": "^4.6.6",
     "@types/prismjs": "^1.16.1",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
@@ -58,6 +59,7 @@
     "boxicons": "^2.0.5",
     "handlebars": "^4.7.6",
     "lodash.debounce": "^4.0.8",
+    "lodash.merge": "^4.6.2",
     "polished": "^3.6.5",
     "prismjs": "^1.21.0",
     "react-helmet": "^6.1.0",
