--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-transition-group": "^4.4.0",
     "@types/styled-components": "^5.1.2",
     "boxicons": "^2.0.5",
     "handlebars": "^4.7.6",
@@ -63,6 +64,7 @@
     "polished": "^3.6.5",
     "prismjs": "^1.21.0",
     "react-helmet": "^6.1.0",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.1.1"
   }
 }
