--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "@storybook/addon-links": "^6.0.16",
     "@storybook/addon-storysource": "^6.0.20",
     "@storybook/react": "^6.0.16",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "babel-loader": "^8.1.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-react": "^7.22.0",
     "prettier": "^2.0.5",
     "react-is": "^16.13.1",
     "rollup": "^2.26.5",
